@@ -15,42 +15,35 @@ WIDTH = 841.889763779528
 HEIGHT = 595.275590551181
 
 def pac(surface)
-  white = [1, 1, 1]
-  black = [0, 0, 0]
-  magenta = [1, 0, 1]
-  cyan = [0, 1, 1]
-  yellow = [1, 1, 0]
-  blue = [0, 0, 1]
-  
   cr = Cairo::Context.new(surface)
 
-  cr.set_source_rgb(*black)
+  cr.set_source_color(:black)
   cr.rectangle(0, 0, WIDTH, HEIGHT).fill
 
   # Wall
-  cr.set_source_rgb(*magenta)
+  cr.set_source_color(:magenta)
   cr.rounded_rectangle(20, 80, 750, 20, 10)
   cr.fill
-  cr.set_source_rgb(*cyan)
+  cr.set_source_color(:cyan)
   cr.rounded_rectangle(20, 80, 750, 20, 10)
   cr.stroke
-  
-  cr.set_source_rgb(*magenta)
+
+  cr.set_source_color(:magenta)
   cr.rounded_rectangle(20, 380, 750, 20, 10)
   cr.fill
-  cr.set_source_rgb(*cyan)
+  cr.set_source_color(:cyan)
   cr.rounded_rectangle(20, 380, 750, 20, 10)
   cr.stroke
-  
+
   # Body
-  cr.set_source_rgb(*yellow)
+  cr.set_source_color(:yellow)
   cr.fill do
     cr.arc(150, 250, 100, 30 * (Math::PI / 180), 330 * (Math::PI / 180))
     cr.line_to(150, 250)
   end
 
   # Dot
-  cr.set_source_rgb(*yellow)
+  cr.set_source_color(:yellow)
   cr.circle(250, 250, 20).fill
   cr.circle(300, 250, 10).fill
   cr.circle(350, 250, 10).fill
@@ -69,20 +62,20 @@ def pac(surface)
   cr.line_to(525, 325)
   cr.line_to(500, 350)
 
-  cr.set_source_rgb(*blue)
+  cr.set_source_color(:blue)
   cr.fill_preserve
-  cr.set_source_rgb(*cyan)
+  cr.set_source_color(:cyan)
   cr.stroke
 
   # Ghost Eyes
-  cr.set_source_rgb(*white)
+  cr.set_source_color(:white)
   cr.rectangle(525, 200, 25, 25).fill
   cr.rectangle(575, 200, 25, 25).fill
-  
-  cr.set_source_rgb(*black)
+
+  cr.set_source_color(:black)
   cr.rectangle(525, 215, 10, 10).fill
   cr.rectangle(575, 215, 10, 10).fill
-  
+
   cr.show_page
 end
 
